# bare-dealii-app

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile.in  Makefile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  class_laplacian-members.html  class_laplacian.html  classes.html  dir_37bdb9d2191b5493db509660c6a8c15a.html  dir_7a95a9cc00fcc7af5a429eec361b64d1.html  dir_7a95a9cc00fcc7af5a429eec361b64d1.js  dir_aa394cd1d9abb8ffe941d9aaafca8d03.html  dir_c52569aa89a7adbb6029022c2fa60a11.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  laplacian_8cc.html  laplacian_8cc_source.html  laplacian_8h.html  laplacian_8h.js  laplacian_8h_source.html  main_8cc.html  main_8cc_source.html  navtreedata.js  navtreeindex0.js  pages.html
.devcontainer/: devcontainer.json
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
doc/: Doxyfile  copyright.txt
execs/: example.cc
gtests/: CMakeLists.txt  gtest_main.cc  simple_check.cc
include/: laplacian.h  template_class.h
scripts/: dr.sh  indent  run_docker.sh  update_copyright.sh
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  (+234 more)
source/: laplacian.cc  main.cc  template_class.cc
tests/: CMakeLists.txt  macro_add_test.cmake  run_test.cmake  setup_testsubproject.cmake  template.cc  tests.h
tests/template_category/: CMakeLists.txt  template.cc
